# forecast-ai

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pylint.yml
artifacts/: benchmark.xlsx
backend/api_service/: Dockerfile  main.py  requirements.txt
backend/clustering_service/: Dockerfile  main.py  requirements.txt  utils.py
backend/prediction_service/: Dockerfile  main.py  pipeline.py  requirements.txt
data/raw/: shop_sales.csv  shop_sales_dates.csv  shop_sales_prices.csv
deployment/: api_service-deployment.yaml  api_service-service.yaml  clustering_service-deployment.yaml  clustering_service-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  prediction_service-deployment.yaml  prediction_service-service.yaml
frontend/: Dockerfile  app.py  plots.py  preprocessing.py  requirements.txt
frontend/src/: plots.py  preprocessing.py
notebooks/: v0.1-zeinovich-firstlook.ipynb  v0.3-romanov-clustering_ts.ipynb  v0.5_besedin_feature_importance.ipynb
