[tool.poetry]
name = "dfu-automl"
version = "0.1.0"
description = "Automated system for demand forecasting"
authors = ["Nikita.Zinovich <nikita.zinovich@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
plotly = "^5.24.0"
scikit-learn = "^1.5.1"
xgboost = "^2.1.1"
optuna = "^4.0.0"
seaborn = "^0.13.2"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
missingno = "^0.5.2"
pylint = "^3.2.7"
black = {extras = ["jupyter"], version = "^24.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
