[tool.poetry]
name = "dfu-automl"
version = "0.1.0"
description = "Automated system for demand forecasting"
authors = ["Nikita.Zinovich <nikita.zinovich@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11.0"
numpy = "1.26.4"
pandas = ">=1.1,<2.0"
matplotlib = "^3.9.2"
plotly = "^5.24.0"
scikit-learn = ">=0.23,<1.1"
xgboost = "^2.1.1"
optuna = ">=2.5.0,<3.0.0"
seaborn = "^0.13.2"
fastapi = "^0.113.0"
streamlit = "^1.38.0"
uvicorn = "^0.30.6"
requests = "^2.32.3"
etna = {extras = ["all"], version = "^2.9.0"}
protobuf = "==3.20.*"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
missingno = "^0.5.2"
pylint = "^3.2.7"
black = {extras = ["jupyter"], version = "^24.8.0"}
pipreqs = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
